--- a/auction-service/package.json
+++ b/auction-service/package.json
@@ -24,5 +24,9 @@
     "aws-sdk": "^2.639.0",
     "http-errors": "^1.8.0",
     "uuid": "^8.3.2"
+  },
+  "volta": {
+    "node": "18.16.0",
+    "pnpm": "8.6.0"
   }
 }
