--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -9,5 +9,9 @@
   },
   "devDependencies": {
     "serverless-bundle": "^1.3.3"
+  },
+  "volta": {
+    "node": "18.16.0",
+    "pnpm": "8.6.0"
   }
 }
